--- a/index.css
+++ b/index.css
@@ -1,5 +1,14 @@
 @import url("reset.css");
 
+:root {
+  --cool-base: #0077b6;
+  --cool-deep: #03045e;
+  --cool-alt: #028090;
+  --warm-base: #de6664;
+  --warm-deep: brown;
+  --warm-alt: #d99759;
+}
+
 body {
   color: rgba(224, 224, 224, 0.8);
   display: flex;
@@ -7,26 +16,39 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  animation-name: breath-interval;
   animation-duration: 16s;
-  animation-timing-function: steps(0.25);
+  animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-fill-mode: forwards;
-  background-color: brown;
 }
 
-@keyframes breath-interval {
+@keyframes cool-interval {
   0% {
-    background-color: brown;
+    background-color: var(--cool-base);
   }
-  25% {
-    background-color: salmon;
+  33% {
+    background-color: var(--cool-deep);
   }
-  50% {
-    background-color: rgb(0, 154, 62);
+  66% {
+    background-color: var(--cool-alt);
   }
-  75% {
-    background-color: royalblue;
+  100% {
+    background-color: var(--cool-base);
+  }
+}
+
+@keyframes warm-interval {
+  0% {
+    background-color: var(--warm-base);
+  }
+  33% {
+    background-color: var(--warm-deep);
+  }
+  66% {
+    background-color: var(--warm-alt);
+  }
+  100% {
+    background-color: var(--warm-base);
   }
 }
 
@@ -42,7 +64,7 @@ body {
   align-items: center;
 }
 
-.instruction {
+/* .instruction {
   visibility: hidden;
 }
 .instruction:after {
@@ -50,9 +72,8 @@ body {
   font-size: 3rem;
   visibility: visible;
   animation-name: text-change;
-  /* animation-name: text-change, text-opacity; */
-  animation-duration: 8s, 4s;
-  animation-timing-function: steps(1), ease-in;
+  animation-duration: 8s;
+  animation-timing-function: steps(1);
   animation-iteration-count: infinite;
   animation-fill-mode: forwards;
 }
@@ -64,18 +85,35 @@ body {
   50% {
     content: "out";
   }
+} */
+
+.box-progress {
+  visibility: hidden;
 }
 
-@keyframes text-opacity {
+.box-progress:after {
+  content: ".";
+  font-size: 3rem;
+  visibility: visible;
+  animation-name: box-progress;
+  animation-duration: 16s;
+  animation-timing-function: steps(1);
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes box-progress {
   0% {
-    opacity: 0;
+    content: ".";
   }
-  5%,
-  95% {
-    opacity: 100%;
+  25% {
+    content: ". .";
   }
-  100% {
-    opacity: 0;
+  50% {
+    content: ". . .";
+  }
+  75% {
+    content: ". . . .";
   }
 }
 
