--- a/index.css
+++ b/index.css
@@ -62,6 +62,23 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  animation-name: zoom;
+  animation-duration: 8s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.15, 1.15);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
 }
 
 /* .instruction {
